tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match6.bal
import ballerina/java;

public function getArrayValueFromMapWhichThrowsCheckedException(string key, map<int> mapValue) returns int[] = @java:Method {
    'class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;
